# gri-tile-pipeline

./: .gitignore  README.md  config.yaml  config_template.yaml  lithops_job_tracker.py  lithops_s1_rtc_orchestrator.py  pyproject.toml  secrets_template.yaml  setup_uv.sh
.github/workflows/: dev_ci_cd_uv.yml
.lithops/: config.euc1.yaml  config.predict_usw2.yaml  config.s1_usw2.yaml  config.usw2.yaml
.lithops/datalab-test/: config.loaders-euc1.yaml  config.loaders-usw2.yaml  config.predict.yaml  config.s1.yaml
data/: tiledb.parquet
docker/: PipDockerfile  PredictDockerfile
docs/: cli_workflows.md  configuration.md  manual_wri_policy_update.md  quickstart.md  setup.md  system_overview.md
docs/guides/: stats_run.md  terramatch_patch.md  tiles_availability.md
infra/: Makefile  README.md
infra/lithops/: config.loaders-euc1.yaml.tmpl  config.loaders-usw2.yaml.tmpl  config.predict.yaml.tmpl  config.s1.yaml.tmpl  render.py
loaders/: download_dem.py  download_s1.py  download_s1_rtc.py  download_s2.py  predict_tile.py  shared.py
scripts/: _gate_a_predict_inside_container.py  audit_dropped_polygons.py  check_tile_availability.py  describe_asset_by_dim.py  describe_assets.py  generate_missing_ttc_tiles.py  generate_subregions_geojson.py  handle_inbound_request.py  merge_tof_output_policy.py  predict_container_smoke.py  predict_lambda_benchmark.py  predict_lambda_smoke.py  preview_polygon_ttc.py  print_raw_file_stats.py  run_missing_predictions.py  run_project_e2e.py  run_single_polygon_stats.py  show_asset_by_dim.py  split_csv_file.py  tile_parity_report.py  ttc_coverage_stats.sql  ttc_status_report.py
src/: lithops_workers.py
src/gri_tile_pipeline/: __init__.py  cli.py  cli_context.py  config.py  diagnostics.py  duckdb_utils.py  exit_codes.py  logging.py  phase_timer.py
tests/: conftest.py  diff_tifs.py  test_data_access.py  test_diff_tiff.py  test_predict_parity.py  test_robust_comparison.py  test_ttc_calls_from_gri_pipeline.py
tests/data/: sample_tiles.csv
tests/operational/: test_availability.py  test_cli_smoke.py  test_dry_run.py
tests/parity/: generate_report.py  metrics.py  test_golden_diagnostics.py  test_golden_parity.py  test_lambda_parity.py  test_parity_dem.py  test_parity_feature_stack.py  test_parity_indices.py  test_parity_normalize.py  (+2 more)
(+114 files in other folders)
