[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gri-tile-pipeline"
version = "0.1.0"
description = "GRI TTC tile pipeline: ingest, download, predict, stats"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "pandas>=2.0",
    "duckdb>=0.9",
    "obstore>=0.3",
    "lithops>=3.4",
]

[project.optional-dependencies]
loaders = [
    "numpy>=1.26",
    "pystac-client>=0.7",
    "odc-stac>=0.3",
    "boto3>=1.28",
    "pyproj>=3.6",
    "shapely>=2.0",
    "planetary-computer>=1.0",
    "requests>=2.28",
    "hickle>=5.0",
    "rasterio>=1.3",
]
predict = [
    "tensorflow>=2.16",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "hickle>=5.0",
    "rasterio>=1.3",
    "bottleneck>=1.3",
    "numpy>=1.26",
]
zonal = [
    "exactextract>=0.2",
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyproj>=3.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "gri-tile-pipeline[loaders,predict,zonal,dev]",
]

[project.scripts]
gri-ttc = "gri_tile_pipeline.cli:gri_ttc"

[tool.hatch.build.targets.wheel]
packages = ["src/gri_tile_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests taking >10s (deselect with -m 'not slow')",
    "parity: parity comparison against reference",
    "integration: requires AWS/S3 access",
    "tf: requires TensorFlow",
]
addopts = "-v --tb=short -ra"
filterwarnings = ["ignore::DeprecationWarning:tensorflow.*"]
